fix homepage content for ie11
delete useless image from folder img

--- a/index.html
+++ b/index.html
@@ -25,38 +25,38 @@
     <nav class="nav-menu">
         <ul>
         <li>
-            <a href="# ">HOMEPAGE</a>
+            <a href="#">HOMEPAGE</a>
             <span>test text here</span>
         </li>
         <li>
-            <a href="# ">STYLE DEMO</a>
+            <a href="#">STYLE DEMO</a>
             <span>test text here</span>
         </li>
         <li>
-            <a href="# ">FULL WIDTH</a>
+            <a href="#">FULL WIDTH</a>
             <span>test text here</span>
         </li>
         <li>
-            <a href="# ">DROPDOWN</a>
+            <a href="#">DROPDOWN</a>
             <span>test text here</span>
         </li>
-       <li><a href="# ">PORTFOLIO</a>
+       <li><a href="#">PORTFOLIO</a>
             <span>test text here</span>    
         </li>
-        <li><a href="# ">GALLERY</a>
+        <li><a href="#">GALLERY</a>
           <span>test text here</span>    
       </li>
-        <li><a href="# ">LONG LINK TEXT</a>
+        <li><a href="#">LONG LINK TEXT</a>
           <span>test text here</span>    
       </li>
           </ul>
     </nav>
     <div class="sub-menu">
-        <a href="# ">Homepage</a>
-        <a href="# ">Style Demo</a>
-        <a href="# ">Full width</a>
-        <a href="# ">Portfolio</a>
-        <a href="# ">Gallery</a>
+        <a href="#">Homepage</a>
+        <a href="#">Style Demo</a>
+        <a href="#">Full width</a>
+        <a href="#">Portfolio</a>
+        <a href="#">Gallery</a>
     </div>
   <div class="delimiter"></div>
     <div class="featured">
@@ -70,10 +70,10 @@
             	nisl nullam ligula vestassa. Condimentumfelis et.</p>
             <a href="# " title="main ">Read The Full Story »</a>
             <ul>
-                <li><img alt="" src="img/news_feed_image1.jpg"></li>
-                <li><img alt="" src="img/news_feed_image2.jpg"></li>
-                <li><img alt="" src="img/news_feed_image3.jpg"></li>
-                <li><img alt="" src="img/news_feed_image4.jpg"></li>
+                <li><img alt="man_type_on_pc" src="img/news_feed_image1.jpg"></li>
+                <li><img alt="night_work" src="img/news_feed_image2.jpg"></li>
+                <li><img alt="water_work" src="img/news_feed_image3.jpg"></li>
+                <li><img alt="people_on_photo_vocation" src="img/news_feed_image4.jpg"></li>
             </ul>
         </section>
     </div>
