--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="css/normalize.css"/>
     <link rel="stylesheet" type="text/css" href="css/style.css">
+
 </head>
 <body>
 <!--
@@ -20,6 +22,9 @@
                 <input type="text">
                 <a href="#">SEARCH </a>
             </form>
+            <a href="#">A-Z Index Student</a>
+            <a href="#">Login Staff</a> 
+            <a href="#">Login</a>
         </section>
     </header>
     <nav class="nav-menu">
