--- a/index.html
+++ b/index.html
@@ -237,9 +237,12 @@
             </form>
         </section>
         <div class="copyright ">
-            <div>
-                Copyright © 2013 - All Rights Reserved - Domain Name </div>
-            <div>Template by OS Templates</div>
+            <h4>
+                Copyright © 2013 - All Rights Reserved - Domain Name 
+            </h4>
+            <h4>
+                Template by OS Templates
+            </h4>
         </div>
     </footer>
 <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
