--- a/index.html
+++ b/index.html
@@ -2,17 +2,18 @@
 <html lang="en">
  <head>
   <meta charset="UTF-8">
-  <title>be, bloacks</title>
+  <title>изменяем разметку под БЭМ</title>
   <link rel="stylesheet" type="text/css" href="css/normalize.css"/>
   <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
 <body>
  <header class="page-header">
-  <section class="head-left">
+	<div class="page-header  page-header__top">
+		<section>
    <h1>Education Department</h1>
    <h2>Free PSD Website Template</h2>
   </section>
-  <section class="head-right">
+  <section>
    <form>
     <input type="text">
     <a href="#">SEARCH </a>
@@ -20,8 +21,8 @@
    <a href="#">A-Z Index Student</a>
    <a href="#">Login Staff</a> 
    <a href="#">Login</a>
+  </div>
   </section>
- </header>
 <nav class="nav-menu">
  <ul>
   <li>
@@ -61,6 +62,7 @@
  <a href="#">Portfolio</a>
  <a href="#">Gallery</a>
 </div>
+</header>
 <div class="delimiter"></div>
 <div class="featured">
  <section class="featured-left">
