--- a/index.html
+++ b/index.html
@@ -221,6 +221,15 @@
   </h4>
  </div>
 </footer>
-<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+<script>
+  
+var links = document.getElementsByTagName('a');
+for (var i = 0; i < links.length; i++) {
+  links[i].addEventListener('click',function (evt) {
+    evt.preventDefault();
+  })
+};
+  
+</script>
 </body>
 </html>
